--- a/comparisonDetails.html
+++ b/comparisonDetails.html
@@ -43,33 +43,33 @@
 				
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-150" style="text-align: center; padding: 0 0 35px 45px;">	
-						<div class="col-5 col-12-narrower" style="margin-top: 13px;">
-							<div style="background-color: #006d2c;border: 1px solid;padding-left: 20px;">
-								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 id="scenario1" style="margin-left: 10px;color: black;"><strong>Best Cost: Scenario </strong></h1>
-									<p id="cost1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
-									<p id="time1" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
-									<p id="mould1" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a id="button1" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+						<div class="col-5 col-12-narrower" >
+							<div class="boxColorScenarioCost">
+								<div class="scenarioBox">
+									<h1 id="scenario1" class="scenario">Best Cost: Scenario </h1>
+									<p id="cost1" class="metricsText">Total Cost: </p>
+									<p id="time1" class="metricsText">Total Time: </p>
+									<p id="mould1" class="mouldText">Required Mould Changes: </p>
+									<a id="button1" class="button">Go to Scenario</a>
 								</div>
 							</div>
 						</div>
 						<div class="col-7 col-12-narrower">
 							<div id='layout'>
-								<div id='containerCost' style="height:330px;width:530px; margin-left: 13px;margin-top: -40px;"></div>
+								<div id='containerCost' style="height:330px;width:530px;margin-left: 15px;margin-top:-50px;"></div>
 							</div>
 						</div>
 					</div>		
 
 					<div class="row gtr-150" style="text-align: center; padding: 0 0 35px 45px;">	
 						<div class="col-5 col-12-narrower" style="margin-top: 13px;">
-							<div style="background-color: #2ca25f;border: 1px solid;padding-left: 20px;">
-								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 id="scenario2" style="margin-left: 10px;color: black;"><strong>Best Time: Scenario </strong></h1>
-									<p id="cost2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
-									<p id="time2" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
-									<p id="mould2" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a id="button2" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+							<div class="boxColorScenarioTime">
+								<div class="scenarioBox">
+									<h1 id="scenario2" class="scenario">Best Time: Scenario </h1>
+									<p id="cost2" class="metricsText">Total Cost: </p>
+									<p id="time2" class="metricsText">Total Time: </p>
+									<p id="mould2" class="mouldText">Required Mould Changes: </p>
+									<a id="button2" class="button">Go to Scenario</a>
 								</div>
 							</div>
 						</div>
@@ -82,13 +82,13 @@
 
 					<div class="row gtr-150" style="text-align: center; padding: 0 0 35px 45px;">	
 						<div class="col-5 col-12-narrower" style="margin-top: 13px;">
-							<div style="background-color: #66c2a4;border: 1px solid;padding-left: 20px;">
-								<div style="background-color: white;text-align: left;padding-bottom:15px;">
-									<h1 id="scenario3" style="margin-left: 10px;color: black;"><strong>Best M_Changes: Scenario </strong></h1>
-									<p id="cost3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Cost</strong>: </p>
-									<p id="time3" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;"><strong>Total Time</strong>: </p>
-									<p id="mould3" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;"><strong>Required Mould Changes</strong>: </p>
-									<a id="button3" class="button" style="display: block; width: 100px; margin: 0 auto;  border: 1px solid;">Go to Scenario</a>
+							<div class="boxColorScenarioMould">
+								<div class="scenarioBox">
+									<h1 id="scenario3" class="scenario">Best M_Changes: Scenario </h1>
+									<p id="cost3" class="metricsText">Total Cost: </p>
+									<p id="time3" class="metricsText">Total Time: </p>
+									<p id="mould3" class="mouldText">Required Mould Changes: </p>
+									<a id="button3" class="button">Go to Scenario</a>
 								</div>
 							</div>	
 						</div>
