--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -4,6 +4,7 @@
 		<title>Scenario Details - What If Analyzer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="author" content="Angelo Casciani">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bar_chart.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -43,17 +44,15 @@
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-150" style="text-align: center; padding: 0px 0 0 60px;">
 						<div class="col-5 col-12-narrower" style="padding-top: 0px;">
-                            <div style="background-color: #b2e2e2;border: 1px solid;padding-left: 20px;margin-top: 90px;">
-								<div style="background-color: white;text-align: left;padding-bottom:10px;">
-									<h1 id="scenarioId" style="font-weight:bold;margin-left: 10px;color: black;">Scenario </h1>
-									<p id="cost" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;">Total Cost: </p>
-									<p id="time" style="margin-left: 10px;margin-bottom: -5px;font-size:13pt;">Total Time: </p>
-									<p id="mould" style="margin-left: 10px;margin-bottom: 15px;font-size:13pt;">Required Mould Changes: </p>
+                            <div class="boxColorScenarioDetails">
+								<div class="scenarioBoxDetails">
+									<h1 id="scenarioId" class="scenarioDetails">Scenario </h1>
+									<p id="cost" class="metricsText">Total Cost: </p>
+									<p id="time" class="metricsText">Total Time: </p>
+									<p id="mould" class="mouldText">Required Mould Changes: </p>
 									
 								</div>
-							</div>	
-			
-
+							</div>
 						</div> 
 
 						<div class="col-7 col-12-narrower" style="padding-top: 0px;">
