Fix Modify Order and Scenario Graphs

--- a/comparison.html
+++ b/comparison.html
@@ -37,15 +37,15 @@
             </header>
 
 			<!-- Main -->
-			<article id="main">
+			<article id="main" style="text-align: center;">
 				<header class="special container" style="margin-bottom:2em">
 					<span class="icon solid fa-chart-bar"></span>
                     <h2><strong>Scenarios Comparison</strong></h2>
                     <p>Here, you can graphically compare the production scenarios for the inserted order.</p>
 				</header>
 
-				<section class="wrapper style3 container special-alt" style="margin-top:10px;margin-bottom:10px;padding-top:30px;padding-bottom:30px;">
-					<div class="row gtr-50">
+				<section class="wrapper style3 container special-alt" style="margin-top:10px;margin-bottom:10px;padding-top:30px;padding-bottom:30px;text-align: center;">
+					<div class="row gtr-200" style="margin-left: 12em;" >
 						<div class="col-8 col-12-narrower" >
 							<p style="margin-bottom:1px;">
 								<span style="font-weight: bold;">Customer</span>:
