--- a/scenarioMetrics.html
+++ b/scenarioMetrics.html
@@ -40,14 +40,17 @@
 				<header class="special container">
 					<span class="icon solid fa-chart-bar"></span>
                     <h2><strong>Scenario Graphs</strong></h2>
-                    <p id="scenarioId">Here, you can analyze the quantity to produce and the mould changes of the Scenario </p>
+                    <p>
+						<span>Here, you can analyze the quantity to produce and the mould changes of the Scenario </span>
+						<span id="scenarioId"></span>.
+					</p>
 				</header>
                 
 				<section class="wrapper style4 container special-alt">
 					<div class="row gtr-200">
-						<div id="lineplot" style="margin-left: 0px;"></div>
-						<div id="checkboxes" style="margin-top: 45px;margin-left: -150px;"></div>
-						<div style="padding:0px;margin-top: 470px;margin-left: -210px;padding-right: 0px;">
+						<div id="lineplot" ></div>
+						<div id="checkboxes" style="margin-top: 120px;margin-left: -150px;"></div>
+						<div style="padding:0px;margin-top: 650px;margin-left: -210px;padding-right: 0px;">
 							<label for="granularity" style="font-size: 13pt;color: black;">Granularity:</label>
 							<select id="granularity" name="granularity" class="granularity" style="font-size: 13pt;color:black;">
 								<option value="day" selected> Day</option>
@@ -57,7 +60,7 @@
 							</select>
 						</div> 
 					</div>
-					</br>	
+					</br>
 					<div class="row gtr-200">
 						<div class="col-12 col-12-narrower">
 						
