--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Login - What If Analyzer</title>
+		<title>Login SSO - What If Analyzer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Angelo Casciani">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body onload="login()" class="index is-preload">
+	<body class="index is-preload">
 		<div id="page-wrapper">
 			<!-- Banner -->
 				<section id="banner">
@@ -30,13 +30,9 @@
 					<br><br>
 
 					<div class="wrapper style1 container special-alt">
-						<form id="login-form">
-							<label for="personal-id">Personal ID:</label>
-							<input type="text" id="personal-id" name="personal-id" style="border: 1px solid white; width: 450px;margin: 0 auto;" required>
-							<label for="password">Password:</label>
-							<input type="password" id="password" name="password" style="border: 1px solid white; width: 450px;margin: 0 auto;" required><br><br>
-							<input type="submit" value="Login">
-						</form>
+						<div style="text-align: center;padding-top: 120px;padding-bottom: 120px;">
+							<a href="login.html" class="button">Login SSO</a>
+						</div>
 					</div>			
 				
 				</section>
