Fix Scenario Details

--- a/scenarioDetails.html
+++ b/scenarioDetails.html
@@ -42,7 +42,12 @@
                     <p>Here, you can analyze and export the metrics of the single scenario.</p>
 				</header>
 				<section class="wrapper style4 container special-alt">
-					<div class="row gtr-150" style="text-align: center; padding: 0px 0 0 60px;">
+					<div class="row gtr-150" style="text-align: center; padding: 0px 0 0 0px;">
+						<div class="col-7 col-12-narrower" style="padding-top: 0px;padding-left: 0px;">
+							<div id='layout'>
+								<div id='container' style="height:300px;width:480px"></div>
+							</div>
+						</div>
 						<div class="col-5 col-12-narrower" style="padding-top: 0px;">
                             <div class="boxColorScenarioDetails">
 								<div class="scenarioBoxDetails">
@@ -53,12 +58,6 @@
 								</div>
 							</div>
 						</div> 
-
-						<div class="col-7 col-12-narrower" style="padding-top: 0px;">
-							<div id='layout'>
-								<div id='container' style="height:300px;width:480px"></div>
-							</div>
-						</div>
                     </div>
 					<br>
 					<div class="row gtr-150">
